RESOLVED FIXED285307
Cookie partitioning quirk doesn't handle redirects
https://bugs.webkit.org/show_bug.cgi?id=285307
Summary Cookie partitioning quirk doesn't handle redirects
Matthew Finkel
Reported 2025-01-02 11:06:34 PST
Cookie partitioning quirk doesn't handle redirects
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-02 11:06:46 PST
Matthew Finkel
Comment 2 2025-01-02 11:13:12 PST
EWS
Comment 3 2025-01-03 06:45:24 PST
Committed 288399@main (802b4aa786a0): <https://commits.webkit.org/288399@main> Reviewed commits have been landed. Closing PR #38467 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.