Cookie partitioning quirk doesn't handle redirects https://bugs.webkit.org/show_bug.cgi?id=285307 rdar://142278344

Reviewed by Alex Christensen.

The assertion that the callback block is only set once for a task was not
correct. This patch adjusts the logic so it allows for redirects. The original
patch also reversed the first/third party functions, so I'm fixing that here,
too.

* Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(WebKit::NetworkDataTaskCocoa::NetworkDataTaskCocoa):
* Source/WebKit/NetworkProcess/cocoa/NetworkTaskCocoa.h:
* Source/WebKit/NetworkProcess/cocoa/NetworkTaskCocoa.mm:
(WebKit::NetworkTaskCocoa::setCookieTransformForThirdPartyRequest):
(WebKit::NetworkTaskCocoa::setCookieTransformForFirstPartyRequest):
(WebKit::NetworkTaskCocoa::setCookieTransform):
(WebKit::NetworkTaskCocoa::willPerformHTTPRedirection):

Canonical link: https://commits.webkit.org/288399@main